# iei-ipmi-oem

./: .clang-format  .gitignore  OWNERS  meson.build  meson.options
src/: asset_info.cpp  firmware_version.cpp  iei_oem.cpp  iei_oem.hpp  meson.build  power.cpp  types.hpp  utils.cpp  utils.hpp
test/: meson.build  test_iei_ipmi_oem.cpp
